added tooltips bit

--- a/hci-practical/report/report.tex
+++ b/hci-practical/report/report.tex
@@ -148,7 +148,7 @@ Then we put all the buttons together which made the UI look much nicer.
 
 \includegraphics[width=\textwidth]{old11.png}
 
-Finally we made the icons transparent.
+Finally we made the icons transparent and added tooltips.
 
 \subsection{The Good}
 
