--- a/hci-practical/report/report.tex
+++ b/hci-practical/report/report.tex
@@ -78,7 +78,12 @@ The functional aspects of these requirements are not difficult to implement so
 the challenge, and where we spent most of our time, was to fulfill the softer
 requirements by making them easy to use and follow the principles.
 
-GOMS
+\subsection{STN}
+The diagram below details a state transition network for the process of adding a
+single labeled polygon to the image.\\
+
+\includegraphics[width=\textwidth]{stn.png}
+
 
 \section{L'Bl\"{u}r}
 
