wrote up our observations

--- a/hci-practical2/report/report.tex
+++ b/hci-practical2/report/report.tex
@@ -41,10 +41,12 @@ Our observations noticed that straight away the subject struggled with opening a
 
 SURVEY RESULTS
 
-
-
 \subsubsection{Software 2}
 It took the subject 6min56s to complete the set of tasks.
+
+Our observations noticed that again using the listbox needed to be more prominent as we had to prompt the subject to use that to allow editing and deleting.  Again we had to explain that moving required deleting and redrawing.  The subject did discover one of our keyboard shortcuts: ctrl-z for undo.  They then proceeded to use this throughout the task.
+
+SURVEY RESULTS
 
 \subsection{Findings}
 Both subjects said both pieces of software made them feel stupid.
@@ -52,6 +54,10 @@ Both subjects said both pieces of software made them feel stupid.
 One potential issue with our experiment is that by having the users use two pieces of software is that when they use the second piece of software they are not necessarily naive users, they may have learned from the first software.  This could be the cause of the shorted times both users had on software two.  One way we could have mitigated this is by having each user use the software in a different order, unfortunately we did not do this.
 
 DYSLEXIC AND COLOUR BLIND
+
+COMMON THREADS FOR MISTAKES
+
+WHAT DID WE LEARN
 
 \section{Evaluation and Comparison}
 
