--- a/hci-practical2/report/report.tex
+++ b/hci-practical2/report/report.tex
@@ -13,7 +13,7 @@ We had two subjects use both the software we were evaluating and our software fr
 
 JUSTIFICATION OF TASKS
 
-Both subjects were naive users, and we tried let them work out what to do without prompting, although we did prompt if they became very stuck.
+Both subjects were non-informatics naive users, and we tried let them work out what to do without prompting, although we did prompt if they became very stuck.
 
 Software 1 is the software given to us to evaluate and software 2 is our software we developed in part one.
 
@@ -29,7 +29,7 @@ SURVEY RESULTS
 \subsubsection{Software 2}
 It took the subject 5min20s to complete the set of tasks.
 
-Our observations noticed that the icons on the button seemed to help the user work out what to do.  The subject coped fairly well with this software until it came to editing and deleting.  We had to explain to the subject that to move a marking it had to be deleted and redrawn.  Attempting to edit again induced a rage with the subject swearing at the computer.  The user had to be prompted to click in the label box on the right hand side to select object ready to be marked or deleted.  They did only need to be prompted on this the first time.
+Our observations noticed that the icons on the button seemed to help the user work out what to do, and the textual tooltips shown when the mouse was hovered over a button aided the user to confirm the use until the function was remembered.  The subject coped fairly well with this software until it came to editing and deleting.  We had to explain to the subject that to move a marking it had to be deleted and redrawn.  Attempting to edit again induced a rage with the subject swearing at the computer.  The user had to be prompted to click in the label box on the right hand side to select object ready to be marked or deleted.  They did only need to be prompted on this the first time. The subject did not find the left-click shortcut to undo drawing, which caused some confusion throughout the tasks.
 
 SURVEY RESULTS
 
@@ -78,6 +78,6 @@ DYSLEXIC AND COLOUR BLIND
 \item Close the program
 \end{enumerate}
 
-We instructed the user to use a directory which contained two images, both with multiple lampposts in.
+We instructed the user to use a directory which contained two images, both with multiple lampposts in so that the tasks could be acheived no matter which image was chosen first by the subject.
 
 \end{document}
