wrote about dyslexia

--- a/hci-practical2/report/report.tex
+++ b/hci-practical2/report/report.tex
@@ -11,7 +11,7 @@
 \section{Cooperative Evaluation}
 We had two subjects use both the software we were evaluating and our software from part one.  We gave them a set of tasks (Appendix~\ref{sec:tasks}) designed test all the functionality of both systems.  We then timed them performing the tasks, made observations on how they were interacting with the systems and then had the complete a survey for both pieces of software to gauge their reactions.
 
-JUSTIFICATION OF TASKS
+We chose this set of tasks as it covered all the visible functionality of the software we were investigating as well as covering our software (apart from launching the help guide).  And the tasks seemed to us like a reasonable approximation of a user using the software.
 
 Both subjects were naive users, and we tried let them work out what to do without prompting, although we did prompt if they became very stuck.
 
@@ -49,11 +49,11 @@ Our observations noticed that again using the listbox needed to be more prominen
 SURVEY RESULTS
 
 \subsection{Findings}
-Both subjects said both pieces of software made them feel stupid.
+Both subjects said both pieces of software made them feel stupid.  Which inidicates that both pieces of software failed at being user friendly.
 
 One potential issue with our experiment is that by having the users use two pieces of software is that when they use the second piece of software they are not necessarily naive users, they may have learned from the first software.  This could be the cause of the shorted times both users had on software two.  One way we could have mitigated this is by having each user use the software in a different order, unfortunately we did not do this.
 
-DYSLEXIC AND COLOUR BLIND
+One of the subjects was dyslexic and colour blind and was dissapointed that neither software had any provision for either of these.  This may have had a performance on the subject's performance on the tasks.
 
 COMMON THREADS FOR MISTAKES
 
