--- a/hci-practical2/report/report.tex
+++ b/hci-practical2/report/report.tex
@@ -61,7 +61,7 @@ WHAT DID WE LEARN
 
 \section{Evaluation and Comparison}
 
-The software we were given to evaluate does not adhere particularly well to Shneiderman's 8 Golden Rules (Appendix~\ref{sec:s_rules}), with breaches of rules 3, 4, 6 and 8. For Rule 3, feedback is a problem because when the mode has been changed there is no indication of what each mode is for. The user is expected to know which mode they are in by the options available - the 'greying out' of the 'Finish current label' button is helpful but does not redeem this enough. The breach of Rule 4 occurs when we first open the application; the user is immediately confronted by a standard open file dialogue, but no indication that the tagger itself is running. This can be a little disconcerting. Additionally, whenever the load tags button is clicked the user is prompted that current changes will be lost, even if there aren't any unsaved changes in the space, or indeed any polygons at all. This needlessly interrupts user flow. The program also doesn't include an 'undo' functionality, so breaks Rule 6. Because of this, to cancel a point drawn in error
+The software we were given to evaluate does not adhere particularly well to Shneiderman's 8 Golden Rules (Appendix~\ref{sec:s_rules}), with breaches of rules 3, 4, 6 and 8. For Rule 3, feedback is a problem because when the mode has been changed via the 'Toggle mode' button there is no indication of what each mode is for. The user is expected to know which mode they are in by the options available - the 'greying out' of the 'Finish current label' button is helpful but does not redeem this enough. The breach of Rule 4 occurs when we first open the application; the user is immediately confronted by a standard open file dialogue, but no indication that the tagger itself is running. This can be a little disconcerting. Additionally, whenever the load tags button is clicked the user is prompted that current changes will be lost, even if there aren't any unsaved changes in the space, or indeed any polygons at all. This needlessly interrupts user flow. The program also doesn't include an 'undo' functionality, so breaks Rule 6. Because of this, to cancel a point drawn in error, an entire polygon must be created, labelled and deleted. 
 
 To improve compliance with Shneiderman's Golden Rules, the 'Toggle Mode' button could be renamed to show the current mode, e.g. 'Switch to edit mode' when drawing and 'Return to draw mode' when editing. Likewise, the 
 
