--- a/hci-practical2/report/report.tex
+++ b/hci-practical2/report/report.tex
@@ -25,14 +25,14 @@ It took the subject 8min51s to complete the set of tasks.
 
 Our observations noticed that throughout the tasks the user was asking questions on what to do and how to do it, they had to refer to the help guide multiple times, including for the same task: how to go into edit mode.  The subjet also started to display rage, at one point swearing at the computer.  They attempted to apply external knowledge in the form of keyboard shortcuts.  They were also appeared frustrated when pressing buttons that had no feedback indicating success or failure.  When the subject was required to move the shape to a new lamppost they tried to move the whole shape in one, not move it point by point.
 
-The survey (Appendix~\ref{sec:survey}, table~\ref{tab:a1}) taken at the end indicates in general that they thought the software was good, the only area that really needs improvement would be the appearance.
+The survey (Appendix~\ref{sec:survey}, Table~\ref{tab:a1}) taken at the end indicates in general that they thought the software was good, the only area that really needs improvement would be the appearance.
 
 \subsubsection{Software 2}
 It took the subject 5min20s to complete the set of tasks.
 
 Our observations noticed that the icons on the button seemed to help the user work out what to do, and the textual tooltips shown when the mouse was hovered over a button aided the user to confirm the use until the function was remembered.  The subject coped fairly well with this software until it came to editing and deleting.  We had to explain to the subject that to move a marking it had to be deleted and redrawn.  Attempting to edit again induced a rage with the subject swearing at the computer.  The user had to be prompted to click in the label box on the right hand side to select object ready to be marked or deleted.  They did only need to be prompted on this the first time. The subject did not find the right-click shortcut to undo drawing, which caused some confusion throughout the tasks.
 
-The survey (Appendix~\ref{sec:survey}, table~\ref{tab:a2}) taken at the end indicates that in general they thought the software was good.  There is only one area that needs improvment and that is deleting a marked object.  It is interesting that they gave deleting and editing different scores as they require the same procedure.
+The survey (Appendix~\ref{sec:survey}, Table~\ref{tab:a2}) taken at the end indicates that in general they thought the software was good.  There is only one area that needs improvment and that is deleting a marked object.  It is interesting that they gave deleting and editing different scores as they require the same procedure.
 
 \subsection{Subject B}
 \subsubsection{Software 1}
@@ -40,7 +40,7 @@ It took the subject 8min29s to complete the set of tasks.
 
 Our observations noticed that straight away the subject struggled with opening an image, this software displayed all files, not just image files which confused the subject.  Also when the subject needed to use the help guide it was described as "too wordy".  The subject also struggled with moving the markings, attempting to move without being in the correct mode.  Switching modes had to be prompted to them, and they had to be prompted every time the mode needed to be switched.
 
-The survey (Appendix~\ref{sec:survey}, table~\ref{tab:b1}) taken at the end indicates mixed feelings about this software.  The core functionality of marking objects is marked as not easy, and the subject did not like the appearence of the software and overall had a negative experience.
+The survey (Appendix~\ref{sec:survey}, Table~\ref{tab:b1}) taken at the end indicates mixed feelings about this software.  The core functionality of marking objects is marked as not easy, and the subject did not like the appearence of the software and overall had a negative experience.
 
 
 \subsubsection{Software 2}
@@ -48,7 +48,7 @@ It took the subject 6min56s to complete the set of tasks.
 
 Our observations noticed that again using the listbox needed to be more prominent as we had to prompt the subject to use that to allow editing and deleting.  Again we had to explain that moving required deleting and redrawing.  The subject did discover one of our keyboard shortcuts: ctrl-z for undo.  They then proceeded to use this throughout the task.
 
-The survey (Appendix~\ref{sec:survey}, table~\ref{tab:b2}) taken at the end indicates the subject had a more positive experience than with the first piece of software: there were no negative marks.  Overall the subject indicating a strong positive experience.  Interestingly there is a big difference in how easy this subject found deleting objects than subject A, this could be because editing is covered first and the two procedures are similar so when deleting was required they already knew the prerequisites for this.
+The survey (Appendix~\ref{sec:survey}, Table~\ref{tab:b2}) taken at the end indicates the subject had a more positive experience than with the first piece of software: there were no negative marks.  Overall the subject indicating a strong positive experience.  Interestingly there is a big difference in how easy this subject found deleting objects than subject A, this could be because editing is covered first and the two procedures are similar so when deleting was required they already knew the prerequisites for this.
 
 \subsection{Findings}
 Both subjects said both pieces of software made them feel stupid.  Which inidicates that both pieces of software failed at being user friendly.
@@ -126,7 +126,7 @@ We instructed the user to use a directory which contained two images, both with 
 \label{sec:survey}
 
 \begin{table}[h]
-\label{tab:a1}
+
 \centering
 \caption{Subject A, Software 1}
 
@@ -154,10 +154,10 @@ We instructed the user to use a directory which contained two images, both with 
     \multicolumn{1}{|l|}{Did you have a positive experience?} & & & & & x & & \\
     \hline
 \end{tabular} 
+\label{tab:a1}
 \end{table}
 
 \begin{table}[h]
-\label{tab:a2}
 \centering
 \caption{Subject A, Software 2}
 
@@ -184,11 +184,12 @@ We instructed the user to use a directory which contained two images, both with 
     \hline
     \multicolumn{1}{|l|}{Did you have a positive experience?} & & & & &  & x & \\
     \hline
-\end{tabular} 
+\end{tabular}
+\label{tab:a2}
 \end{table}
 
 \begin{table}[h]
-\label{tab:b1}
+
 \centering
 \caption{Subject B, Software 1}
 
@@ -216,10 +217,11 @@ We instructed the user to use a directory which contained two images, both with 
     \multicolumn{1}{|l|}{Did you have a positive experience?} & & & x & &  &  & \\
     \hline
 \end{tabular} 
+\label{tab:b1}
 \end{table}
 
 \begin{table}[h]
-\label{tab:b2}
+
 \centering
 \caption{Subject B, Software 2}
 
@@ -247,6 +249,7 @@ We instructed the user to use a directory which contained two images, both with 
     \multicolumn{1}{|l|}{Did you have a positive experience?} & & & & &  & x & \\
     \hline
 \end{tabular} 
+\label{tab:b2}
 \end{table}
 
 
