think I've finished section A

--- a/hci-practical2/report/report.tex
+++ b/hci-practical2/report/report.tex
@@ -51,15 +51,17 @@ Our observations noticed that again using the listbox needed to be more prominen
 The survey (Appendix~\ref{sec:survey}, Table~\ref{tab:b2}) taken at the end indicates the subject had a more positive experience than with the first piece of software: there were no negative marks.  Overall the subject indicating a strong positive experience.  Interestingly there is a big difference in how easy this subject found deleting objects than subject A, this could be because editing is covered first and the two procedures are similar so when deleting was required they already knew the prerequisites for this.
 
 \subsection{Findings}
-Both subjects said both pieces of software made them feel stupid.  Which inidicates that both pieces of software failed at being user friendly.
+Both subjects said both pieces of software made them feel stupid, despite the high ratings they awarded.  Which inidicates that both pieces of software failed at being user friendly.
 
 One potential issue with our experiment is that by having the users use two pieces of software is that when they use the second piece of software they are not necessarily naive users, they may have learned from the first software.  This could be the cause of the shorted times both users had on software two.  One way we could have mitigated this is by having each user use the software in a different order, unfortunately we did not do this.
 
 One of the subjects was dyslexic and colour blind and was dissapointed that neither software had any provision for either of these.  This may have had a performance on the subject's performance on the tasks.
 
-COMMON THREADS FOR MISTAKES
+For software 1 anything relating to editing caused a lot of problems for the user, this we believe is due to the unintuitive 'toggle mode' feature.  For software 2 it was deleting and loading data that were identified as causing problems.
 
-WHAT DID WE LEARN
+As we are evaluating software 1 specifically a more detailed analysis of the areas for improvements is required, our results show that the documentation, toggling of modes, provide feedback from interactions, moving the shape as a whole not point by point, filtering of files and a general improvement in aesthetic are the todo points for the software.
+
+Whilst we cannot be 100\% sure, due to the way the experiment was run, it was in software 2 that the tasks were completed faster.  Our observations of the subjects noticed less problems with software 2 than software 1.  The survey results themselves also indicate a slight preference for software 2 with both users having a more positive experience with software 2.  However as both pieces of software made them feel stupid we know that both need serious improvement.
 
 \section{Evaluation and Comparison}
 
