reworded paragraph on s2 improvements

--- a/hci-practical2/report/report.tex
+++ b/hci-practical2/report/report.tex
@@ -59,7 +59,7 @@ One of the subjects was dyslexic and colour blind and was dissapointed that neit
 
 For software 1 anything relating to editing caused a lot of problems for the user, this we believe is due to the unintuitive 'toggle mode' feature.  For software 2 it was deleting and loading data that were identified as causing problems.
 
-As we are evaluating software 1 specifically a more detailed analysis of the areas for improvements is required, our results show that the documentation, toggling of modes, provide feedback from interactions, moving the shape as a whole not point by point, filtering of files and a general improvement in aesthetic are the todo points for the software.
+A more detailed analysis of the areas for improvements in software 2, including survey results and observations, shows that: the documentation, toggling of modes, provide feedback from interactions, moving the shape as a whole not point by point, filtering of files and a general improvement in aesthetic are the todo points for the software.
 
 Whilst we cannot be 100\% sure, due to the way the experiment was run, it was in software 2 that the tasks were completed faster.  Our observations of the subjects noticed less problems with software 2 than software 1.  The survey results themselves also indicate a slight preference for software 2 with both users having a more positive experience with software 2.  However as both pieces of software made them feel stupid we know that both need serious improvement.
 
