finished evaluation against golden rules, and started looking at task sequences

--- a/hci-practical2/report/report.tex
+++ b/hci-practical2/report/report.tex
@@ -14,7 +14,7 @@ We had two subjects use both the software we were evaluating and our software fr
 
 We chose this set of tasks as it covered all the visible functionality of the software we were investigating as well as covering our software (apart from launching the help guide).  And the tasks seemed to us like a reasonable approximation of a user using the software.
 
-Both subjects were non-informatics naive users, and we tried let them work out what to do without prompting, although we did prompt if they became very stuck.
+Both subjects were non-informatics naive users, and we tried to let them work out what to do without prompting, although we did prompt if they became very stuck.
 
 Software 1 is the software given to us to evaluate and software 2 is our software we developed in part one.
 
@@ -23,7 +23,7 @@ Software 1 is the software given to us to evaluate and software 2 is our softwar
 \subsubsection{Software 1}
 It took the subject 8min51s to complete the set of tasks. 
 
-Our observations noticed that throughout the tasks the user was asking questions on what to do and how to do it, they had to refer to the help guide multiple times, including for the same task: how to go into edit mode.  The subjet also started to display rage, at one point swearing at the computer.  They attempted to apply external knowledge in the form of keyboard shortcuts.  They were also appeared frustrated when pressing buttons that had no feedback indicating success or failure.  When the subject was required to move the shape to a new lamppost they tried to move the whole shape in one, not move it point by point.
+Our observations noticed that throughout the tasks the user was asking questions on what to do and how to do it, they had to refer to the help guide multiple times, including for the same task: how to go into edit mode.  The subjet also started to display frustration, at one point swearing at the computer.  They attempted to apply external knowledge in the form of keyboard shortcuts.  They were also appeared frustrated when pressing buttons that had no feedback indicating success or failure.  When the subject was required to move the shape to a new lamppost they tried to move the whole shape in one, not move it point by point.
 
 The survey (Appendix~\ref{sec:survey}, table~\ref{tab:a1}) taken at the end indicates in general that they thought the software was good, the only area that really needs improvement would be the appearance.
 
@@ -63,11 +63,13 @@ WHAT DID WE LEARN
 
 \section{Evaluation and Comparison}
 
-The software we were given to evaluate does not adhere particularly well to Shneiderman's 8 Golden Rules (Appendix~\ref{sec:s_rules}), with breaches of rules 3, 4, 6 and 8. For Rule 3, feedback is a problem because when the mode has been changed via the 'Toggle mode' button there is no indication of what each mode is for. The user is expected to know which mode they are in by the options available - the 'greying out' of the 'Finish current label' button is helpful but does not redeem this enough. The breach of Rule 4 occurs when we first open the application; the user is immediately confronted by a standard open file dialogue, but no indication that the tagger itself is running. This can be a little disconcerting. Additionally, whenever the load tags button is clicked the user is prompted that current changes will be lost, even if there aren't any unsaved changes in the space, or indeed any polygons at all. This needlessly interrupts user flow. The program also doesn't include an 'undo' functionality, so breaks Rule 6. Because of this, to cancel a point drawn in error, an entire polygon must be created, labelled and deleted. Rule 8 fails to be met because changing mode adds needless cognitive load: remembering which mode the program is in, and the sequence of actions to change it. As discussed above, it was found to cause test subjects some difficulty.
+The software we were given to evaluate does not adhere particularly well to Shneiderman's 8 Golden Rules (Appendix~\ref{sec:s_rules}), with breaches of rules 1, 3, 4, 6 and 8. Rule 1 is breached by the operations requiring numerous switches of focus between the image window and the button panel. For example, to edit a complete polygon the user ir required to click the 'Toggle mode' button, select a polygon in the image, click the 'Start editing' button, manipulate the polyon points within the image, and finally click the 'Stop editing' button. This sequence of actions is significantly longer and different to each of the other avaiable in the program. For Rule 3, feedback is a problem because when the mode has been changed via the 'Toggle mode' button there is no indication of what each mode is for. The user is expected to know which mode they are in by the options available - the 'greying out' of the 'Finish current label' button is helpful but does not redeem this enough. The breach of Rule 4 occurs when we first open the application; the user is immediately confronted by a standard open file dialogue, but no indication that the tagger itself is running. This can be a little disconcerting. Additionally, whenever the load tags button is clicked the user is prompted that current changes will be lost, even if there aren't any unsaved changes in the space, or indeed any polygons at all. This needlessly interrupts user flow. The program also doesn't include an 'undo' functionality, so breaks Rule 6. Because of this, to cancel a point drawn in error, an entire polygon must be created, labelled and deleted. Rule 8 is not met because changing mode adds needless cognitive load: remembering which mode the program is in, and the sequence of actions to change it. As discussed above, it was found to cause test subjects some difficulty.
 
-The evaluation program does conform well with rules 2 and 7: shortcuts exist in the standard menu fashion, i.e. pressing the 'alt' key with the underlined letter performs that button click. This is an effective way of speeding up the process.
+The evaluation program does conform well with rule 2: shortcuts exist in the standard menu fashion, i.e. pressing the 'alt' key with the underlined letter performs that button click. This is an effective way of speeding up the process.
 
-To improve compliance with Shneiderman's Golden Rules, the 'Toggle Mode' button could be renamed to show the current mode, e.g. 'Switch to edit mode' when drawing and 'Return to draw mode' when editing. Likewise, the 
+The remaining rules, 5 and 7, are maintained in incidentally by the application: the task is such that there is little scope for serious error, and the user has full control of the program with no time-sensitive operations.
+
+To improve compliance with Shneiderman's Golden Rules, reducing the steps to edit a finished polygon would be required; perhaps clicking and dragging a vertex when in the editing mode should initiate the action, removing the need for a specific (and currently misleadingly labelled) button. The 'Toggle Mode' button could be renamed to show the current mode, e.g. 'Switch to edit mode' when drawing and 'Return to draw mode' when editing. This would improve feedback and reduce cognitive load. To improve adherence with Rule 4, it would be helpful for the labelling interface to open first, with the open image dialogue appearing by clicking prompt in the centre of the image region. This would give the user an indication of what the program expects (an image path), and why they are doing it (there is no image to tag). An undo function could be added to comply with rule 6, with a key shortcut and a button below 'Finish current label'.
 
 \newpage
 \section{Appendix}
